<resources>
    <string name="app_name">My Application</string>
    <string name="sign_up">Sign Up</string>
    <string name="registration">Registration</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="module_key">Module Key</string>
    <string name="tank_capacity">Tank Capacity</string>
    <string name="chanuka_abeysinghe">Chanuka Abeysinghe</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="summary_of_the_year">Summary of the year</string>
    <string name="year_summary">Year Summary</string>
    <string name="usage_details">Usage Details</string>
    <string name="refresh">Refresh</string>
</resources>
