<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/grad_bg"
    tools:context=".SignUp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_gravity="center_vertical">

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/login"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/email"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="1dp"/>

                <EditText
                    android:id="@+id/txtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/password"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="1dp"/>

                <EditText
                    android:id="@+id/txtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/confirm_password"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="1dp"/>

                <EditText
                    android:id="@+id/txtConfirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:inputType="textPassword"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-light"
                android:text="@string/module_key"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:paddingStart="1dp"/>

            <EditText
                android:id="@+id/txtModuleKey"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/et_bg"
                android:fontFamily="sans-serif-light"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/tank_capacity"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:paddingStart="1dp"/>

                <EditText
                    android:id="@+id/txtTankCapacity"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/et_bg"
                    android:fontFamily="sans-serif-light"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:textColor="@color/white"
                    android:textSize="15sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_bg"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="sans-serif-medium"
                android:paddingLeft="70dp"
                android:paddingRight="70dp"
                android:text="Create Account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />

            <Button
                android:id="@+id/btnLogIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-medium"
                android:text="Login"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>